# WindowManager

./: CMakeLists.txt
include/: WindowManager.h  hotkey_manager.h  window_manager.h
src/: .ninja_deps  .ninja_log  WindowManager.cpp  hotkey_manager.cpp  main.cpp  simple_manager.cpp  window_manager.cpp
